# AarogyaAI

./: .gitignore  ARCHITECTURE.md  FEATURES.md  PHASE0_SUMMARY.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  demo.py  instructions.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py
backend/: .env.example  config.py  main.py  requirements.txt
backend/core/: __init__.py  red_flag_engine.py
backend/council/: __init__.py  groq_client.py  orchestrator.py
backend/federated/: __init__.py  aggregator.py  dp_privacy.py
backend/knowledge_base/: heart_knowledge.json
backend/ml/: __init__.py  symptom_classifier.py
backend/rag/: __init__.py  engine.py  report_processor.py
backend/storage/: __init__.py  hospital_db.py
federated/: __init__.py  client.py
frontend/: .gitignore
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx
frontend/src/lib/: local_learning.ts  sanitizer.ts  storage.ts
infra/: Dockerfile  Dockerfile.council-stub  council_stub.py  docker-compose.yml
llm/: __init__.py  council_client.py  red_flags.py  sanitizer.py  schemas.py
ml/: __init__.py  feature_extractor.py  model.py  pipeline.py  storage.py  vector_search.py
schemas/: council_response.json  local_patient.json  ml_feature_vector.json  sanitized_prompt.json
tests/: __init__.py  test_api.py  test_model.py  test_pipeline.py  test_red_flags.py  test_sanitizer.py  test_storage.py  test_vector_search.py
